menu (no styles) + player name

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Sedades</title>
 </head>
 <body>
+    
+    <div id="menu">
+        <label>Name</label>
+        <input name="name" id="nameInput">
+        <button id="button">play</button>
+    </div>
     <canvas id="canvas"></canvas>
     <script src="./scripts/main.js" type="module"></script>
 </body>
