--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     
-    <div id="menu">
-        <label>Name</label>
-        <input name="name" id="nameInput">
-        <button id="button">play</button>
+    <div id="menu__inner">
+        <div id="menu">
+            <h1 class="caption">Sedades</h1>
+            
+            <input id="nameInput" placeholder="Name">
+            <br>
+            <button id="button">play</button>
+        </div>
     </div>
     <canvas id="canvas"></canvas>
     <script src="./scripts/main.js" type="module"></script>
